--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.5",
+    "dotenv": "^16.3.1",
     "node": "^20.5.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
