--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
   # Set the maximum budget for the CSS file (adjust the size as needed).
   [build.budgets]
-    type = "css"
+    type = "scss"
     maximumFileSize = "8kb" # Adjust this value according to your requirements.
