fix: changed budget

--- a/angular.json
+++ b/angular.json
@@ -42,15 +42,15 @@
             "production": {
               "budgets": [
                 {
-                  "type": "initial",
-                  "maximumWarning": "500kb",
-                  "maximumError": "1mb"
-                },
-                {
-                  "type": "anyComponentStyle",
-                  "maximumWarning": "2kb",
-                  "maximumError": "4kb"
-                }
+									"type": "initial",
+									"maximumWarning": "4mb",
+									"maximumError": "11mb"
+								},
+								{
+									"type": "anyComponentStyle",
+									"maximumWarning": "4mb",
+									"maximumError": "11mb"
+								}
               ],
               "outputHashing": "all"
             },
